@@ -1,0 +1,4 @@
+#as: -n32 -KPIC
+#source: macro-warn-2.s
+#objdump: -p
+#pass
