@@ -1,0 +1,3 @@
+.*: Assembler messages:
+.*:4: Warning: Macro instruction expanded into multiple instructions
+.*:7: Warning: Macro instruction expanded into multiple instructions.*slot
