@@ -1,0 +1,5 @@
+#as: -32
+#source: macro-warn-4.s
+#stderr: macro-warn-4.l
+#objdump: -p
+#pass
