@@ -1,0 +1,3 @@
+.*: Assembler messages:
+.*:3: Warning: Macro instruction expanded into multiple instructions
+.*:5: Warning: Macro instruction expanded into multiple instructions.*slot
